# TermiEmu

./: .gitignore  ARCHITECTURE.md  CHANGELOG_2025.md  CODE_OF_CONDUCT.md  CODE_QUALITY.md  CONTRIBUTING.md  Cargo.toml  DESIGN_SUMMARY.md  DOCUMENTATION_INDEX.md  FEATURE_MATRIX.md  GAP_ANALYSIS.md  GETTING_STARTED.md  GUI_UX_DESIGN.md  IMPLEMENTATION_COMPARISON.md  INNOVATION_OPPORTUNITIES.md  LICENSE-APACHE  LICENSE-MIT  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_QUICK_REFERENCE.md  PHASE2_SUMMARY.txt  PRODUCTION_ROADMAP.md  README.md  RECOMMENDATIONS.md  ROADMAP_QUICK_REFERENCE.md  ROADMAP_SUMMARY.md  SECURITY.md  STANDARDS_REFERENCE.md  TERMINAL_EMULATOR_RESEARCH.md  clippy.toml  config.example.toml  deny.toml  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
.cargo-husky/hooks/: README.md  pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: Terminal-design.md  my-agent.md  planning-agent.md  te-se-agent.md  terminal_researcher.md
.github/workflows/: ci.yml
benches/: .gitkeep  README.md  basic_benchmark.rs  phase2_benchmarks.rs
docs/: DETAILED_FEATURES.md  LOGGING.md
examples/: .gitkeep
platform/linux/: termiemu.desktop
src/: debug.rs  error.rs  lib.rs  logging.rs  main.rs
src/client/: index.html  main.ts  style.css
src/clipboard/: mod.rs
src/config/: mod.rs  theme.rs
src/pty/: mod.rs
src/server/: index.ts
src/terminal/: cell.rs  (+8 more)
tests/: .gitkeep  phase1_integration_test.rs  phase2_integration_test.rs  pty_integration_test.rs
themes/: README.md  catppuccin-mocha.toml
(+3 files in other folders)
