[package]
name = "termiemu"
version = "0.1.0"
authors = ["TermiEmu Contributors"]
edition = "2021"
rust-version = "1.70.0"
description = "A modern, high-performance terminal emulator built in Rust"
repository = "https://github.com/merenut/TermiEmu"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["terminal", "emulator", "tui", "pty"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5.1"
# Optional: Enables pre-commit hooks for automated quality checks
# Install with: cargo add --dev cargo-husky --features user-hooks
# cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[[bin]]
name = "termiemu"
path = "src/main.rs"

[[bench]]
name = "basic_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
